src/tests/testfiles/binary-operators/types-18.txt
testfiles/binary-operators/types-18.c:2:5: error: invalid operands to binary '*' (have 'char' and 'float')
'c' * 5.9;
^
